--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,14 +1,14 @@
 @import url('./reset.css');
-/* @import url('./iziToast.css'); */
+@import url('./1-timer.css');
+@import url('./2-snackbar.css');
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
+  color: #2e2f42;
+  background-color: #fafafa;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,94 +16,34 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.form-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 10px;
-  border-radius: 8px;
-  padding: 8px 16px;
-  width: 95px;
+.navigation-btn {
+  display: block;
+  width: 115px;
   height: 40px;
-  background: #4e75ff;
-  font: 500 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
+  padding: 8px 16px;
+  text-align: center;
+  border: 1px solid #4e75ff;
+  border-radius: 8px;
+  background-color: #4e75ff;
   color: #fff;
-}
-.form-button:hover {
-  background: #6c8cff;
-}
-.form-button[disabled] {
-  background: #cfcfcf;
-  color: #989898;
-}
-label {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #2e2f42;
 }
 
-textarea {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  width: 360px;
-  height: 80px;
-  box-sizing: border-box;
+.navigation-btn:hover,
+.navigation-btn:focus {
+  background-color: #6c8cff;
 }
-legend {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
+
+.navigation-btn:first-child {
+  margin-bottom: 16px;
 }
-input {
-  width: 360px;
-  height: 40px;
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  padding: 8px;
-  padding-left: 16px;
-  box-sizing: border-box;
-}
-.input-promise {
-  width: auto;
-  height: auto;
-}
-.timer {
+
+header {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
-  gap: 24px;
-}
-.field {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.value {
-  font: 400 40px / 1.2 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-}
-.label {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  color: #2e2f42;
-}
-.form {
-  width: 360px;
-}
-.fieldset {
-  height: 78px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
-  -webkit-appearance: 'Always Show Up/Down Arrows';
+  margin-bottom: 16px;
+  background-color: transparent;
 }
